--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta keywords="">
+    <title>Receitas da Lis</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <div class="principal">
+        <header class="cabecalho ">
+            <img class="imagem-cabecalho src alt=logotipo" />
+            <h1 class="titulo">receitas da lis</h1>
+        </header>
 
+        <section class="direita">
+
+        </section>
+    </div>   
+</body>
+</html>
