--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
             <h1 class="titulo">receitas da lis</h1>
         </header>
 
-        <section class="direita">
+        <section class="secao1"> 
+             <imag class="fotoreceita1" src="receita de canjica"  />
+             <h3 class="titulo receita1">canjica cremosa</h3>
+             <br><br>
+             <ul class="ingrediente1">ingrediente
+                <li>400g de canjica branca</li>li></li>
+                <li>1 lata de leite condesando</li>li></li>
+                <li>1l de leite</li>li></li>
+                <li>250g de creme de leite</li>li></li>
+                <li>300g de amendoim torrado e moido </li>li></li>
+                <li> 750 ml de agua<>/li</li>
+             </ul>
+            <br><br>
+            
+
 
         </section>
     </div>   
